Load list of cartodb tables

--- a/UI_CartoDBPlugin.ui
+++ b/UI_CartoDBPlugin.ui
@@ -90,7 +90,14 @@
     </layout>
    </item>
    <item>
-    <widget class="QTableView" name="cartoDBTablesTB"/>
+    <widget class="QListWidget" name="tablesList">
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::MultiSelection</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
