--- a/ui/UI_CartoDBPlugin.ui
+++ b/ui/UI_CartoDBPlugin.ui
@@ -145,5 +145,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>tablesList</sender>
+   <signal>itemDoubleClicked(QListWidgetItem*)</signal>
+   <receiver>CartoDBPlugin</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>268</x>
+     <y>198</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>268</x>
+     <y>168</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
