--- a/ui/NewConnection.ui
+++ b/ui/NewConnection.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>NewConnection</class>
  <widget class="QDialog" name="NewConnection">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
