--- a/resources.qrc
+++ b/resources.qrc
@@ -5,4 +5,7 @@
   <qresource prefix="/plugins/qgis-cartodb/" >
     <file>images/add.png</file>
   </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/add_sql.png</file>
+  </qresource>
 </RCC>
