--- a/resources.qrc
+++ b/resources.qrc
@@ -8,4 +8,19 @@
   <qresource prefix="/plugins/qgis-cartodb/" >
     <file>images/add_sql.png</file>
   </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/text.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/calculator.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/number.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/calendar.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/layers.png</file>
+  </qresource>
 </RCC>
