Show more info about user tables, fix load shared tables

--- a/ui/UI_CartoDBPlugin.ui
+++ b/ui/UI_CartoDBPlugin.ui
@@ -59,6 +59,17 @@
     </widget>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="optionsLayout">
+     <item>
+      <widget class="QCheckBox" name="extentCB">
+       <property name="text">
+        <string>Filter by current extent</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="userDataLayout">
      <item>
       <widget class="QLabel" name="avatarLB">
