Fix #15 again, filter by current extent

--- a/ui/UI_CartoDBPlugin.ui
+++ b/ui/UI_CartoDBPlugin.ui
@@ -61,7 +61,7 @@
    <item>
     <layout class="QHBoxLayout" name="optionsLayout">
      <item>
-      <widget class="QCheckBox" name="extentCB">
+      <widget class="QCheckBox" name="extentCH">
        <property name="text">
         <string>Filter by current extent</string>
        </property>
