--- a/resources.qrc
+++ b/resources.qrc
@@ -3,10 +3,13 @@
     <file>images/icon.png</file>
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/" >
-    <file>images/add.png</file>
+    <file>images/icons/add.png</file>
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/" >
-    <file>images/add_sql.png</file>
+    <file>images/icons/polygon.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/" >
+    <file>images/icons/add_sql.png</file>
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/" >
     <file>images/icons/text.png</file>
