--- a/resources.qrc
+++ b/resources.qrc
@@ -1,29 +1,32 @@
 <RCC>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icon.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/add.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/polygon.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
+    <file>images/icons/rectangle.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/add_sql.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/text.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/calculator.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/number.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/calendar.png</file>
   </qresource>
-  <qresource prefix="/plugins/qgis-cartodb/" >
+  <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/layers.png</file>
   </qresource>
 </RCC>
