--- a/ui/CreateViz.ui
+++ b/ui/CreateViz.ui
@@ -38,9 +38,6 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QListWidget" name="availableList"/>
-       </item>
       </layout>
      </item>
      <item>
@@ -67,14 +64,26 @@
        <item>
         <widget class="QToolButton" name="rightBT">
          <property name="text">
-          <string>--&gt;</string>
+          <string>+</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QToolButton" name="leftBT">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>22</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
-          <string>&lt;--</string>
+          <string>-</string>
          </property>
         </widget>
        </item>
@@ -107,9 +116,6 @@
           <string>Map Layers</string>
          </property>
         </widget>
-       </item>
-       <item>
-        <widget class="QListWidget" name="mapList"/>
        </item>
       </layout>
      </item>
