Fix #12, Multilanguage support

--- a/ui/CreateViz.ui
+++ b/ui/CreateViz.ui
@@ -196,7 +196,7 @@
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>Save</string>
+        <string>Create</string>
        </property>
       </widget>
      </item>
