--- a/ui/NewSQL.ui
+++ b/ui/NewSQL.ui
@@ -23,8 +23,14 @@
       <layout class="QVBoxLayout" name="leftContainer">
        <item>
         <widget class="QLabel" name="sqlLB">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;SQL Query&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>SQL Query</string>
          </property>
         </widget>
        </item>
@@ -82,8 +88,14 @@
       <layout class="QVBoxLayout" name="rightContainer">
        <item>
         <widget class="QLabel" name="tablesLB">
+         <property name="font">
+          <font>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Tables&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>Tables</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
