* Add composite mode in create maps. * Add dash style to lines in create maps. * Add join style to lines in create maps.

--- a/templates/simpleline.less
+++ b/templates/simpleline.less
@@ -2,4 +2,7 @@ $layername {
   line-color: $lineColor;
   line-width: $lineWidth;
   line-opacity: $opacity;
+  line-comp-op: $lineCompOp;
+  line-join: $lineJoin;
+  line-dasharray: $lineDasharray;
 }
