--- a/templates/simplepoint.less
+++ b/templates/simplepoint.less
@@ -8,4 +8,5 @@ $layername {
   marker-width: $width;
   marker-fill: $fillColor;
   marker-allow-overlap: true;
+  marker-comp-op: $markerCompOp;
 }
