--- a/templates/simplepolygon.less
+++ b/templates/simplepolygon.less
@@ -1,7 +1,10 @@
 $layername {
   polygon-fill: $fillColor;
   polygon-opacity: $opacity;
+  polygon-comp-op: $polygonCompOp;
   line-color: $borderColor;
   line-width: $borderWidth;
   line-opacity: $opacity;
+  line-join: $lineJoin;
+  line-dasharray: $lineDasharray;
 }
