--- a/resources.qrc
+++ b/resources.qrc
@@ -12,7 +12,7 @@
     <file>images/icons/rectangle.png</file>
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/">
-    <file>images/icons/add_sql.png</file>
+    <file>images/icons/sql.png</file>
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/text.png</file>
@@ -28,5 +28,11 @@
   </qresource>
   <qresource prefix="/plugins/qgis-cartodb/">
     <file>images/icons/layers.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/">
+    <file>images/icons/upload.png</file>
+  </qresource>
+  <qresource prefix="/plugins/qgis-cartodb/">
+    <file>images/icons/map.png</file>
   </qresource>
 </RCC>
