Styles for site, part 1

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,6 @@
 @charset "utf-8";
 
 
-
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
@@ -27,6 +26,7 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+@import url("http://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
 
 // Using media queries with like this:
