Implement site design

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,13 @@
-<header class="site-header">
-
+<header id="header" class="site-header">
+  <h1 id="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <nav id="nav">
+    <ul>
+      <li><a href="{{ site.baseurl }}/">Home</a></li>
+      <li><a href="https://github.com/gkudos/qgis-cartodb/wiki">Docs</a></li>
+      <li><a href="https://github.com/gkudos/qgis-cartodb">Github</a></li>
+    </ul>
+  </nav>
+  <!--
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
@@ -23,5 +31,6 @@
     </nav>
 
   </div>
+  -->
 
 </header>
