--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,18 +3,140 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="landing">
+    <div id="page-wrapper">
+      {% include header.html %}
+      {% include banner.html %}
 
-    {% include header.html %}
+      <section id="one" class="spotlight style1 bottom">
+        <span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+        <div class="content">
+          <div class="container">
+            <div class="row">
+              <div class="4u 12u$(medium)">
+                <header>
+                  <h2>Odio faucibus ipsum integer consequat</h2>
+                  <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+                </header>
+              </div>
+              <div class="4u 12u$(medium)">
+                <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
+                Blandit orci porttitor semper. Arcu phasellus tortor enim mi
+                nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
+                augue varius tempus lobortis porttitor accumsan consequat
+                adipiscing lorem dolor.</p>
+              </div>
+              <div class="4u$ 12u$(medium)">
+                <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+                adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+                Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+                mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+                ipsum dolor nullam.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="#two" class="goto-next scrolly">Next</a>
+      </section>
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
+      <section id="two" class="spotlight style2 right">
+        <span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+        <div class="content">
+          <header>
+            <h2>Interdum amet non magna accumsan</h2>
+            <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+          </header>
+          <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+          <ul class="actions">
+            <li><a href="#" class="button">Learn More</a></li>
+          </ul>
+        </div>
+        <a href="#three" class="goto-next scrolly">Next</a>
+      </section>
+
+      <section id="three" class="spotlight style3 left">
+        <span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+        <div class="content">
+          <header>
+            <h2>Interdum felis blandit praesent sed augue</h2>
+            <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+          </header>
+          <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+          <ul class="actions">
+            <li><a href="#" class="button">Learn More</a></li>
+          </ul>
+        </div>
+        <a href="#four" class="goto-next scrolly">Next</a>
+      </section>
+
+      <section id="four" class="wrapper style1 special fade-up">
+        <div class="container">
+          <header class="major">
+            <h2>Accumsan sed tempus adipiscing blandit</h2>
+            <p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+          </header>
+          <div class="box alt">
+            <div class="row uniform">
+              <section class="4u 6u(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-area-chart"></span>
+                <h3>Ipsum sed commodo</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+              <section class="4u 6u$(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-comment"></span>
+                <h3>Eleifend lorem ornare</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+              <section class="4u$ 6u(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-flask"></span>
+                <h3>Cubilia cep lobortis</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+              <section class="4u 6u$(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-paper-plane"></span>
+                <h3>Non semper interdum</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+              <section class="4u 6u(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-file"></span>
+                <h3>Odio laoreet accumsan</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+              <section class="4u$ 6u$(medium) 12u$(xsmall)">
+                <span class="icon alt major fa-lock"></span>
+                <h3>Massa arcu accumsan</h3>
+                <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+              </section>
+            </div>
+          </div>
+          <footer class="major">
+            <ul class="actions">
+              <li><a href="#" class="button">Magna sed feugiat</a></li>
+            </ul>
+          </footer>
+        </div>
+      </section>
+
+      <!--
+      <div class="page-content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
       </div>
+      -->
+
+      {% include footer.html %}
     </div>
 
-    {% include footer.html %}
-
+    <!-- Scripts -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="{{ "/js/jquery.scrolly.min.js" | prepend: site.baseurl }}"></script>
+		<script src="{{ "/js/jquery.dropotron.min.js" | prepend: site.baseurl }}"></script>
+		<script src="{{ "/js/jquery.scrollex.min.js" | prepend: site.baseurl }}"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/skel/3.0.0.dev/skel.min.js"></script>
+		<script src="{{ "/js/util.js" | prepend: site.baseurl }}"></script>
+		<!--[if lte IE 8]><script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
+		<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
   </body>
 
 </html>
