--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header" class="site-header">
-  <h1 id="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+  <h1 id="logo"><a href="{{ site.baseurl }}/"><img src="images/logo.png" alt="{{ site.title }}"/></a></h1>
   <nav id="nav">
     <ul>
       <li><a href="{{ site.baseurl }}/">Home</a></li>
