Enhancements ============================================ * Create maps without select layers.
Fixes
============================================
* Fix order layer in maps.

--- a/ui/UI_CartoDBPlugin.ui
+++ b/ui/UI_CartoDBPlugin.ui
@@ -63,7 +63,7 @@
      <item>
       <widget class="QCheckBox" name="extentCH">
        <property name="text">
-        <string>Filter by current extent</string>
+        <string>Import data by current extent</string>
        </property>
       </widget>
      </item>
