--- a/ui/CreateViz.ui
+++ b/ui/CreateViz.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>540</width>
+    <width>616</width>
     <height>424</height>
    </rect>
   </property>
@@ -72,6 +72,13 @@
       <widget class="QListWidget" name="availableList">
        <property name="selectionMode">
         <enum>QAbstractItemView::NoSelection</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QCheckBox" name="publicCH">
+       <property name="text">
+        <string>Make Public</string>
        </property>
       </widget>
      </item>
