--- a/ui/Upload.ui
+++ b/ui/Upload.ui
@@ -103,11 +103,23 @@
        </item>
        <item>
         <widget class="QProgressBar" name="uploadBar">
+         <property name="autoFillBackground">
+          <bool>true</bool>
+         </property>
+         <property name="maximum">
+          <number>100</number>
+         </property>
          <property name="value">
           <number>24</number>
          </property>
+         <property name="textVisible">
+          <bool>true</bool>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="invertedAppearance">
+          <bool>false</bool>
          </property>
          <property name="textDirection">
           <enum>QProgressBar::TopToBottom</enum>
