Fix #30 Fix #30 When you push a new layer to CartoDB, it doesn't register the layer with your current project as being a CartoDB layer.

--- a/ui/Upload.ui
+++ b/ui/Upload.ui
@@ -155,6 +155,9 @@
      <property name="text">
       <string>Add CartoDB layer to project</string>
      </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
