--- a/ui/Upload.ui
+++ b/ui/Upload.ui
@@ -153,7 +153,7 @@
       <bool>true</bool>
      </property>
      <property name="text">
-      <string>Add CartoDB layer to project</string>
+      <string>Add CartoDB layer to project (this could truncate the column's names)</string>
      </property>
      <property name="checked">
       <bool>true</bool>
