--- a/ui/CreateViz.ui
+++ b/ui/CreateViz.ui
@@ -78,7 +78,7 @@
      <item row="7" column="1">
       <widget class="QCheckBox" name="publicCH">
        <property name="text">
-        <string>Make Public</string>
+        <string>Public</string>
        </property>
       </widget>
      </item>
