--- a/templates/simplepolygon.less
+++ b/templates/simplepolygon.less
@@ -1,6 +1,6 @@
 $layername {
   polygon-fill: $fillColor;
-  polygon-opacity: $opacity;
+  polygon-opacity: $polygonOpacity;
   polygon-comp-op: $polygonCompOp;
   line-color: $borderColor;
   line-width: $borderWidth;
