--- a/templates/defaultpolygon.less
+++ b/templates/defaultpolygon.less
@@ -1,6 +1,6 @@
 $layername {
   polygon-fill: $fillColor;
-  polygon-opacity: $polygonOpacity;
+  polygon-opacity: 0.9;
   polygon-comp-op: $polygonCompOp;
   line-color: black;
   line-width: 0.5;
