--- a/ui/NewConnection.ui
+++ b/ui/NewConnection.ui
@@ -44,6 +44,8 @@
      </property>
     </spacer>
    </item>
+
+   <!-- username -->
    <item>
     <layout class="QFormLayout" name="form">
      <item row="0" column="0">
@@ -63,6 +65,8 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="userTX"/>
      </item>
+
+     <!-- API Key -->
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -73,7 +77,21 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="apiKeyTX"/>
      </item>
+
+     <!-- hostname -->
      <item row="2" column="0">
+      <widget class="QLabel" name="hostNameLabel">
+       <property name="text">
+        <string>Hostname:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="hostNameTX"/>
+     </item>     
+
+     <!-- multiuser -->
+     <item row="3" column="0">
       <widget class="QCheckBox" name="multiuserCH">
        <property name="text">
         <string>Multiuser Account?</string>
@@ -82,6 +100,7 @@
      </item>
     </layout>
    </item>
+
    <item>
     <spacer name="verticalSpacer_2">
      <property name="orientation">
